# pdflo

./: .dockerignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  codecov.yml  dependabot.yml
.github/workflows/: backend-ci.yml  ci.yml  frontend-ci.yml
backend/: Dockerfile  entrypoint.sh  manage.py  pyproject.toml
backend/taskhub/: asgi.py  settings.py  urls.py  wsgi.py
backend/tasks/: __init__.py  admin.py  models.py  serializers.py  urls.py  views.py
backend/tests/: conftest.py  test_example.py
frontend/: .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: TaskForm.tsx  TaskList.tsx
